add post build events to make application run correctly

--- a/ICE.StockMonitor.PriceService2/ICE.StockMonitor.PriceService2.csproj
+++ b/ICE.StockMonitor.PriceService2/ICE.StockMonitor.PriceService2.csproj
@@ -52,4 +52,8 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>mkdir "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\"
+copy /Y "$(TargetDir)$(ProjectName).dll" "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\$(ProjectName).dll"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
