--- a/ICE.StockMonitor.PriceService1/ICE.StockMonitor.PriceService1.csproj
+++ b/ICE.StockMonitor.PriceService1/ICE.StockMonitor.PriceService1.csproj
@@ -52,4 +52,8 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\"
+copy /Y "$(TargetDir)$(ProjectName).dll" "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\$(ProjectName).dll"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
