--- a/ICE.StockMonitor.PriceService2/ICE.StockMonitor.PriceService2.csproj
+++ b/ICE.StockMonitor.PriceService2/ICE.StockMonitor.PriceService2.csproj
@@ -53,7 +53,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>mkdir "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\"
-copy /Y "$(TargetDir)$(ProjectName).dll" "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\$(ProjectName).dll"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\"
+copy /Y "$(TargetDir)$(ProjectName).dll" "$(SolutionDir)\ICE.StockMonitor.UI\bin\Debug\PriceServices\$(ProjectName).dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
